<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.gillian.baseball.game.dialog.EventDialogViewModel" />
        <variable
            name="page"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_hitter_single"
            style="@style/GameButton"
            android:layout_width="@dimen/hitter_button_width"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.single()}"
            android:text="@string/Single"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            style="@style/GameButton"
            android:id="@+id/button_hitter_double"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_margin"
            android:text="@string/Double"
            android:onClick="@{()->viewModel.Double()}"
            app:layout_constraintEnd_toEndOf="@+id/button_hitter_single"
            app:layout_constraintStart_toStartOf="@+id/button_hitter_single"
            app:layout_constraintTop_toBottomOf="@+id/button_hitter_single" />

        <Button
            style="@style/GameButton"
            android:id="@+id/button_hitter_triple"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_margin"
            android:text="@string/Triple"
            android:onClick="@{()->viewModel.triple()}"
            app:layout_constraintEnd_toEndOf="@+id/button_hitter_single"
            app:layout_constraintStart_toStartOf="@+id/button_hitter_single"
            app:layout_constraintTop_toBottomOf="@+id/button_hitter_double" />

        <Button
            style="@style/GameButton"
            android:id="@+id/button_hitter_homerun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_margin"
            android:text="@string/homerun"
            android:onClick="@{()->viewModel.homerun()}"
            app:layout_constraintEnd_toEndOf="@+id/button_hitter_single"
            app:layout_constraintStart_toStartOf="@+id/button_hitter_single"
            app:layout_constraintTop_toBottomOf="@+id/button_hitter_triple" />

        <Button
            style="@style/GameButton"
            android:id="@+id/button_hitter_hbp"
            android:layout_width="@dimen/hitter_button_width2"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/double_margin"
            android:layout_marginTop="@dimen/double_margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/hit_by_pitch"
            android:onClick="@{()->viewModel.hbp()}"
            app:layout_constraintEnd_toStartOf="@+id/button_hitter_error"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_hitter_homerun" />

        <Button
            style="@style/GameButton"
            android:id="@+id/button_hitter_error"
            android:layout_width="@dimen/hitter_button_width2"
            android:layout_height="wrap_content"
            android:text="@string/error"
            android:onClick="@{()->viewModel.error()}"
            app:layout_constraintEnd_toStartOf="@+id/button_hitter_drop"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_hitter_hbp"
            app:layout_constraintTop_toTopOf="@+id/button_hitter_hbp" />

        <Button
            style="@style/GameButton"
            android:id="@+id/button_hitter_drop"
            android:layout_width="@dimen/hitter_button_width2"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/double_margin"
            android:text="@string/dropped_third"
            android:onClick="@{()->viewModel.droppedThird()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_hitter_error"
            app:layout_constraintTop_toTopOf="@+id/button_hitter_error" />

        <TextView
            style="@style/EventPage"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@{String.valueOf(viewModel.hitterEvent.player.name)}"
            tools:text="陳傑憲"/>

        <View
            android:id="@+id/bar_hitter"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/grey_888"
            android:layout_marginBottom="60dp"
            app:layout_constraintStart_toStartOf="@id/button_hitter_hbp"
            app:layout_constraintEnd_toEndOf="@id/button_hitter_drop"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            style="@style/EventPage"
            android:id="@+id/text_hitter_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{page}"
            app:layout_constraintTop_toBottomOf="@id/bar_hitter"
            app:layout_constraintStart_toStartOf="@id/bar_hitter"
            app:layout_constraintEnd_toEndOf="@id/bar_hitter"
            android:layout_marginTop="@dimen/margin"
            tools:text="1/4"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>